// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineAlert renders with danger intent 1`] = `
<div
  className="root intent-danger"
>
  <div
    className="icon-container"
  >
    <Component
      fill="danger"
      iconName="ErrorCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <Component
      className="title"
      type="body-strong"
    >
      Hello world!
    </Component>
  </div>
</div>
`;

exports[`InlineAlert renders with info intent 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <Component
      className="title"
      type="body-strong"
    >
      Hello world!
    </Component>
  </div>
</div>
`;

exports[`InlineAlert renders with provided description 1`] = `
<Component
  description="Hello world!"
>
  <div
    className="root intent-info"
  >
    <div
      className="icon-container"
    >
      <Component
        fill="info"
        iconName="InfoCircleFilled"
        size="default"
      >
        <SvgInfoCircleFilled
          className="icon fill-info size-default"
        >
          <svg
            className="icon fill-info size-default"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm1 17a1 1 0 11-2 0v-6a1 1 0 112 0v6zM11 7a1 1 0 112 0 1 1 0 01-2 0z"
              fillRule="evenodd"
            />
          </svg>
        </SvgInfoCircleFilled>
      </Component>
    </div>
    <div
      className="container"
    >
      <Component
        className="description"
        type="body"
      >
        <span
          className="type-body description"
        >
          Hello world!
        </span>
      </Component>
    </div>
  </div>
</Component>
`;

exports[`InlineAlert renders with provided title 1`] = `
<Component
  title="Hello world!"
>
  <div
    className="root intent-info"
  >
    <div
      className="icon-container"
    >
      <Component
        fill="info"
        iconName="InfoCircleFilled"
        size="default"
      >
        <SvgInfoCircleFilled
          className="icon fill-info size-default"
        >
          <svg
            className="icon fill-info size-default"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm1 17a1 1 0 11-2 0v-6a1 1 0 112 0v6zM11 7a1 1 0 112 0 1 1 0 01-2 0z"
              fillRule="evenodd"
            />
          </svg>
        </SvgInfoCircleFilled>
      </Component>
    </div>
    <div
      className="container"
    >
      <Component
        className="title"
        type="body-strong"
      >
        <span
          className="type-body-strong title"
        >
          Hello world!
        </span>
      </Component>
    </div>
  </div>
</Component>
`;

exports[`InlineAlert renders with provided title and description 1`] = `
<Component
  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
  title="Hello world!"
>
  <div
    className="root intent-info"
  >
    <div
      className="icon-container"
    >
      <Component
        fill="info"
        iconName="InfoCircleFilled"
        size="default"
      >
        <SvgInfoCircleFilled
          className="icon fill-info size-default"
        >
          <svg
            className="icon fill-info size-default"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm1 17a1 1 0 11-2 0v-6a1 1 0 112 0v6zM11 7a1 1 0 112 0 1 1 0 01-2 0z"
              fillRule="evenodd"
            />
          </svg>
        </SvgInfoCircleFilled>
      </Component>
    </div>
    <div
      className="container"
    >
      <Component
        className="title"
        type="body-strong"
      >
        <span
          className="type-body-strong title"
        >
          Hello world!
        </span>
      </Component>
      <Component
        className="description"
        type="body"
      >
        <span
          className="type-body description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </span>
      </Component>
    </div>
  </div>
</Component>
`;

exports[`InlineAlert renders with success intent 1`] = `
<div
  className="root intent-success"
>
  <div
    className="icon-container"
  >
    <Component
      fill="success"
      iconName="CheckCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <Component
      className="title"
      type="body-strong"
    >
      Hello world!
    </Component>
  </div>
</div>
`;

exports[`InlineAlert renders with undefined intent 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <Component
      className="title"
      type="body-strong"
    >
      Hello world!
    </Component>
  </div>
</div>
`;

exports[`InlineAlert renders with warning intent 1`] = `
<div
  className="root intent-warning"
>
  <div
    className="icon-container"
  >
    <Component
      fill="warning"
      iconName="Caution"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <Component
      className="title"
      type="body-strong"
    >
      Hello world!
    </Component>
  </div>
</div>
`;
